logs/tower.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tower'...
Listing './lib/python3.5/site-packages/tower/management'...
Listing './lib/python3.5/site-packages/tower/management/commands'...
Compiling './lib/python3.5/site-packages/tower/management/commands/amalgamate.py'...
***   File "./lib/python3.5/site-packages/tower/management/commands/amalgamate.py", line 61
    print " Can't find (%s).  Skipping..." % (r_messages)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tower/management/commands/extract.py'...
***   File "./lib/python3.5/site-packages/tower/management/commands/extract.py", line 132
    print "  %s" % filename
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tower/management/commands/merge.py'...
***   File "./lib/python3.5/site-packages/tower/management/commands/merge.py", line 53
    print "Merging %s strings to each locale..." % domain
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tower/tests'...
Listing './lib/python3.5/site-packages/tower-0.4.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
